--- a/source/photo.html
+++ b/source/photo.html
@@ -8,14 +8,14 @@
   </head>
   <body class="photo-main">
     <header class="page-header">
-      <div class="page-header__wrapper">
-        <nav class="main-nav main-nav--closed main-nav--nojs">
-          <div class="main-nav__logo-toggle-wrapper">
-            <a class="main-nav__logo-link">
-              <img class="main-nav__logo-image" src="img/logo-pink-white-tablet.svg" width="146" height="40" alt="Логотип Пинка">
-            </a>
-            <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          </div>
+      <div class="page-header__wrapper page-header__wrapper--menu-opened page-header__wrapper--nojs">
+        <div class="page-header__logo-toggle-wrapper">
+          <a class="page-header__logo-link">
+            <img class="page-header__logo-image" src="img/logo-pink-white-desktop.svg" width="146" height="40" alt="Логотип Пинка.">
+          </a>
+          <button class="page-header__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        </div>
+        <nav class="page-header__main-nav main-nav ">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="index.html">Главная</a>
@@ -34,10 +34,11 @@
       </div>
     </header>
 
+
     <main class="page-main">
       <section class="page-main__intro intro">
         <div class="intro__wrapper">
-          <h1 class="intro__page-title">Фотографии пользователей</h1>
+          <h1 class="intro__page-title">Фотографии<br>пользователей</h1>
         </div>
       </section>
 
